--- a/src/main/resources/templates/loja/listapropostaloja.html
+++ b/src/main/resources/templates/loja/listapropostaloja.html
@@ -2,27 +2,27 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Lista Propostas</title>
+        <title th:text="#{list_proposal.message}"></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" type ="text/css" th:href = "@{/css/lojaindex.css}">
     </head>
     <body>
         <div align="center">
-			<h1 class="label">Lista de Propostas</h1>
+			<h1 class="label" th:text="#{list_proposal.message}"></h1>
             <h2>
-                <a th:href="@{/loja/lojaindex}">Voltar</a>
+                <a th:href="@{/loja/lojaindex}" th:text="#{back.message}"></a>
             </h2>
 		</div>
         <div align="center">
             <table class="styled-table">		
                 <thead>
 					<tr>
-						<th>Valor</th>
-						<th>Condições</th>
-						<th>Data</th>
-						<th>Carro</th>
-                        <th>Status</th>
-                        <th>Ação</th>
+						<th th:text="#{value.message}"></th>
+						<th th:text="#{condition.message}"></th>
+						<th th:text="#{date.message}"></th>
+						<th th:text="#{car.message}"></th>
+                        <th th:text="#{status.message}"></th>
+                        <th th:text="#{action.message}"></th>
 					</tr>
 
                 </thead>		
@@ -33,8 +33,8 @@
                     <td th:text="${proposta.dataatual}"></td>
                     <td th:text="${proposta.carro.modelo}"></td>
                     <td th:text="${proposta.statusproposta}"></td>
-                    <td><a th:href="@{/loja/aceitar/{id} (id=${proposta.id}) }">Aceitar</a>
-                        <a th:href="@{/loja/recusar/{id} (id=${proposta.id}) }">Recusar</a>
+                    <td><a th:href="@{/loja/aceitar/{id} (id=${proposta.id}) }" th:text="#{accept.message}"></a>
+                        <a th:href="@{/loja/recusar/{id} (id=${proposta.id}) }" th:text="#{refuse.message}"></a>
                     </td>
                 </tr>
                 </tbody>
