--- a/src/main/resources/templates/admin/cadastrouser.html
+++ b/src/main/resources/templates/admin/cadastrouser.html
@@ -3,25 +3,17 @@
 xmlns:th="http://www.thymeleaf.org"
 xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
   <head>
-    <title>Registro de Usuário</title>
+    <title th:text="#{register_users.message}"></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <!--<style>
-    body {
-      background-image: url(../image/car.jpg);
-      background-size: cover;
-      background-position: center;
-    }
-  </style>-->
 
   <link rel="stylesheet" type ="text/css" th:href="@{/css/style.css}">
   </head>
   <body>
     <div align="center">
-      <h1><font color="black"><font color="Black">Gerenciamento de Usuários</font></h1>
+      <h1 th:text="#{manage_users.message}"><font color="black"></font></h1>
       <h2>
-        <a th:href="@{/admin/listausers}">Listar Usuários</a>
+        <a th:href="@{/admin/listausers}" th:text="#{list_users.message}"></a>
       </h2>
     </div>
     <div align="center">
@@ -31,9 +23,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label text="Username:" for="username"></label> 
+                <label th:text="#{username.message}" for="username"></label> 
                 <input type="text" class="form-control" id="username"
-                    placeholder="Username"
+                    th:placeholder="#{username.message}"
                     autofocus="autofocus" th:field="*{username}"
                     th:classappend="${#fields.hasErrors('username')} ? is-invalid" />
 
@@ -43,7 +35,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label text="Senha:" for="password"></label> 
+                <label th:text="#{password.message}" for="password"></label> 
                 <input type="text" class="form-control" id="password"
                     placeholder="******" autofocus="autofocus"
                     th:field="*{password}"
@@ -55,9 +47,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
             
             <div class="form-group col-md-6">
-                <label text="Nome:" for="nome"></label> 
+                <label th:text="#{name.message}" for="nome"></label> 
                 <input type="text" class="form-control" id="nome" th:field="*{nome}"
-                    placeholder="Nome" autofocus="autofocus"
+                    th:placeholder="#{name.message}" autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('nome')} ? is-invalid" />
                     
                 <div class="invalid-feedback">
@@ -66,7 +58,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
             
             <div class="form-group col-md-6">
-                <label text="CPF/CNPJ:" for="cpf"></label> 
+                <label th:text="#{cpf_cnpj.message}" for="cpf"></label> 
                 <input type="text" class="form-control" id="cpf" th:field="*{cpf}"
                     autofocus="autofocus" placeholder="___.___.___-__"
                     th:classappend="${#fields.hasErrors('cpf')} ? is-invalid" />
@@ -77,9 +69,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label text="Telefone:" for="telefone"></label> 
+                <label th:text="#{telephone.message}" for="telefone"></label> 
                 <input type="text" class="form-control" id="telefone" th:field="*{telefone}"
-                    placeholder="Telefone" autofocus="autofocus"
+                    th:placeholder="#{telephone.message}" autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('telefone')} ? is-invalid" />
                     
                 <div class="invalid-feedback">
@@ -88,9 +80,9 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label text="Sexo:" for="sexo"></label> 
+                <label th:text="#{sex.message}" for="sexo"></label> 
                 <input type="text" class="form-control" id="sexo" th:field="*{sexo}"
-                    placeholder="Sexo" autofocus="autofocus"
+                    th:placeholder="#{sex.message}" autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('sexo')} ? is-invalid" />
                     
                 <div class="invalid-feedback">
@@ -99,7 +91,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label for="datanasc">Data Nascimento:</label> 
+                <label for="datanasc" th:text="#{birth.message}"></label> 
                 <input type="text" class="form-control" id="datanasc" th:field="*{datanasc}"
                     placeholder="00/00/0000" autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('datanasc')} ? is-invalid" />
@@ -110,7 +102,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label for="descricao">Descrição (Loja):</label> 
+                <label for="descricao" th:text="#{description_store.message}"></label> 
                 <input type="text" class="form-control" id="descricao" th:field="*{descricao}"
                     autofocus="autofocus"
                     th:classappend="${#fields.hasErrors('descricao')} ? is-invalid" />
@@ -121,7 +113,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
             </div>
 
             <div class="form-group col-md-6">
-                <label text="Papel:" for="role"></label> 
+                <label th:text="#{role.message}" for="role"></label> 
                 <select id="role" class="form-control" th:field="*{role}"
                     th:classappend="${#fields.hasErrors('role')} ? is-invalid">
                     <option value="ROLE_ADMIN">ROLE_ADMIN</option>
@@ -137,7 +129,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 
         <input type="hidden" id="id" th:field="*{id}" />
         <button type="submit"
-            class="btn btn-primary btn-sm">Salvar</button>
+            class="btn btn-primary btn-sm" th:text="#{save.message}"></button>
     </form>
     </div>
   </body>
