--- a/src/main/resources/templates/admin/listausers.html
+++ b/src/main/resources/templates/admin/listausers.html
@@ -2,26 +2,26 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Lista Users</title>
+        <title th:text="#{list_users.message}"></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" type ="text/css" th:href = "@{/css/lojaindex.css}">
     </head>
     <body>
         <div align="center">
-			<h1 class="label">Gerenciamento Usuários</h1>
+			<h1 class="label" th:text="#{manage_users.message}"></h1>
 		</div>
         <div align="center">
             <table class="styled-table">		
                 <thead>
 					<tr>
-						<th>Username</th>
-						<th>CPF</th>
-						<th>Nome</th>
-						<th>Telefone</th>
-                        <th>Sexo</th>
-						<th>Data Nascimento</th>
-						<th>Papel</th>
-						<th>Ação</th>
+						<th th:text="#{username.message}"></th>
+						<th th:text="#{cpf.message}"></th>
+						<th th:text="#{name.message}"></th>
+						<th th:text="#{telephone.message}"></th>
+                        <th th:text="#{sex.message}"></th>
+						<th th:text="#{birth.message}"></th>
+						<th th:text="#{role.message}"></th>
+						<th th:text="#{action.message}"></th>
 					</tr>
 
                 </thead>		
@@ -34,8 +34,8 @@
                     <td th:text="${usuario.sexo}"></td>
                     <td th:text="${usuario.datanasc}"></td>
                     <td th:text="${usuario.role}"></td>
-                    <td><a th:href="@{/admin/editar/{id} (id=${usuario.id}) }">Editar</a>
-                        <a th:href="@{/admin/excluir/{id} (id=${usuario.id}) }" onclick="return confirm('Tem certeza que deseja deletar esse usuário?');">Deletar</a>
+                    <td><a th:href="@{/admin/editar/{id} (id=${usuario.id}) }" th:text="#{edit.message}"></a>
+                        <a th:href="@{/admin/excluir/{id} (id=${usuario.id}) }" onclick="return confirm('Tem certeza que deseja deletar esse usuário?');" th:text="#{delete.message}"></a>
                     </td>
                 </tr>
                 </tbody>
