--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Carros</title>
+    <title th:text="#{title_list_car.message}"></title>
     <link rel="stylesheet" type ="text/css" th:href="@{/css/lista.css}">
 </head>
 <body> 
@@ -14,7 +14,7 @@
           <img th:src="@{/image/logo_free.jpg}">
         </div>
         <ul class="top_bar">
-          <li><a th:href="@{/contato}">Contato</a></li>
+          <li><a th:href="@{/contato}" th:text="#{contact.message}"></a></li>
           <li><a th:href="@{/login}">Login</a></li>
           <li><a class="active" th:href="@{/home}">Home</a></li>
         </ul>
@@ -22,8 +22,8 @@
 
       <br>
     <div id="divFiltro">
-      <input type="text" name="Filtro" placeholder="Buscar carro???" id="filtro">
-      <input type="submit" name="Confirmar" id="">
+      <input type="text" name="Filtro" th:placeholder="#{search_car.message}" id="filtro">
+      <input type="submit" th:value="#{send_btn.message}" name="Confirmar" id="">
     </div>
     <div class="image-grid">
       <a th:each="carro : ${carros}" class="teste" th:href="@{/user/cadastroproposta/{id} (id=${carro.id})}"><img th:src="@{/image/{modelo}.jpg (modelo=${carro.modelo})}" alt="carroalt"><h2 class="titulo_carro"
