--- a/src/main/resources/templates/user/listapropostauser.html
+++ b/src/main/resources/templates/user/listapropostauser.html
@@ -2,26 +2,26 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Lista Propostas</title>
+        <title th:text="#{list_proposal.message}"></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" type ="text/css" th:href = "@{/css/lojaindex.css}">
     </head>
-    <body>
+    <body> 
         <div align="center">
-			<h1 class="label">Lista de Propostas</h1>
+			<h1 class="label"th:text="#{list_proposal.message}"></h1>
             <h2>
-                <a th:href="@{/user/userindex}">Voltar</a>
+                <a th:href="@{/user/userindex}" th:text="#{back.message}"></a>
             </h2>
 		</div>
         <div align="center">
             <table class="styled-table">		
                 <thead>
 					<tr>
-						<th>Valor</th>
-						<th>Condições</th>
-						<th>Data</th>
-						<th>Carro</th>
-                        <th>Status</th>
+						<th th:text="#{value.message}"></th>
+						<th th:text="#{condition.message}"></th>
+						<th th:text="#{date.message}"></th>
+						<th th:text="#{car.message}"></th>
+                        <th th:text="#{status.message}"></th>
 					</tr>
 
                 </thead>		
