--- a/src/main/resources/templates/user/userindex.html
+++ b/src/main/resources/templates/user/userindex.html
@@ -4,20 +4,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type ="text/css" th:href = "@{/css/style.css}">
-        <title>Menu User</title>
+        <title th:text="#{user_menu.message}"></title>
     </head>
     <body class="PagUsr">
         <div align="center">
-            <h1><font color="white">Página do Usuário</font></h1>
-            <h3><font color="white">Olá <span sec:authentication="name">A</span></font></h3>
+            <font color="white"> <h1 th:text="#{user_page.message}"></font></h1>
+            <font color="white"> <h3 th:text="#{hello.message}"> <span sec:authentication="name"></span></font></h3>
         </div>
         <div class="containeruser">
             <ol class="rounded-list">
                 <div class="teste">
-                    <a th:href="@{/user/listapropostauser}"><h2> Lista de Propostas</h2></a>
+                    <a th:href="@{/user/listapropostauser}"><h2 th:text="#{list_proposal.message}"></h2></a>
                     <br>
                     <br>
-                    <a href="#" onclick="document.getElementById('logout-form').submit();"><h2>Logout</h2></a>
+                    <a href="#" onclick="document.getElementById('logout-form').submit();"><h2 th:text="#{quit.message}"></h2></a>
                     <form id="logout-form" th:action="@{/logout}" method="post"></form>
                 </div>
             </ol>
