--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,10 @@
           <li><a th:href="@{/login}">Login</a></li>
           <li><a class="active" href="#">Home</a></li>
           <li><a th:href="@{''(lang=pt)}">
-            <img alt="" th:src="@{/image/Brasil.gif}" style="width: 50px"/>
+            <img id="flag" alt="Brazil Flag" th:src="@{/image/Brasil.gif}" />
           </a></li>
           <li><a th:href="@{''(lang=en)}">
-            <img alt="" th:src="@{/image/EUA.gif}" style="width: 50px"/>
+            <img id="flag" alt="EUA Flag" th:src="@{/image/EUA.gif}"/>
           </a></li>
         </ul>
       </div>
