--- a/src/main/resources/templates/user/cadastroproposta.html
+++ b/src/main/resources/templates/user/cadastroproposta.html
@@ -9,7 +9,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
     <link rel="stylesheet" type ="text/css" th:href="@{/css/style.css}">
     <style>
         body {
-          background-image: url(../image/Mercedes.png);
+          background-image: url([[@{/image/Mercedes.png}]]);
           background-size: cover;
           background-position: center;
         }
